# simmer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: ex.rs  nostd.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checked.rs
src/: checked.rs  lib.rs
tests/: checked_tests.rs  checked_ufmt.rs  tests.rs  ufmt.rs  util.rs
