[package]
name = "simmer"
description = "A temperature unit library for Rust. It's intended to be minimal, embedded-aware, and easy to use!"
authors = ["Barrett Ray <contact@barretts.club>"]
license = "MIT"
repository = "https://github.com/onkoe/simmer"
version = "0.1.1"
edition = "2021"
categories = ["no-std", "science", "embedded", "mathematics"]
readme = "README.md"
keywords = ["temperature", "temp", "fahrenheit", "celsius", "kelvin"]
exclude = [".gitignore", "tests/", "README.md"]

[dependencies]
ufmt = "0.2"
ufmt-write = "0.1"
ufmt_float = "0.2"
onlyerror = "0.1"

[features]
#/// Includes the default `f64` type for internal + exported values.
default = []
#/// Use `f32` instead of `f64` for temperatures. This can help when working with devices that don't
#/// support `f64`, including some Arduino boards.
f32 = []
#/// Enable the `CheckedTemperature` type. Less performant, but limits temps to reality.
checked = []

[dev-dependencies]
anyhow = "1.0.75"
assert_approx_eq = "1.1"
